--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
     ]
   },
   "dependencies": {
+    "file-loader": "^5.0.2",
+    "node-sass": "^4.14.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "react-transition-group": "^4.3.0",
+    "sass-loader": "^8.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.7.5",
